Moved install instructions to the main Book page

--- a/Book.ipynb
+++ b/Book.ipynb
@@ -64,10 +64,46 @@
     "\n",
     "* Appendix C. Computational methods **needs conversion**\n",
     "\n",
-    "Notes\n",
+    "About\n",
     "=================\n",
     "\n",
-    "This book is a work in progress!  The source material is my lecture notes, which are progressively being converted to Jupyter Notebook and HTML format.  The tools that I am using may create broken matrix equations, links, references, or incorrectly formatted figures.  I am trying to correct them as I go, but I may miss some.  If you notice anything that needs correcting, please email me at kris.hauser@duke.edu."
+    "This book is a work in progress!  The source material is my lecture notes from courses at Indiana University and Duke University, which are progressively being converted to Jupyter Notebook and HTML format.\n",
+    "\n",
+    "The conversion tools that I am using may create broken matrix equations, links, references, or incorrectly formatted figures.  I am trying to correct them as I go, but I may miss some.  If you notice anything that needs correcting, please email me at [kris.hauser@duke.edu](mailto:kris.hauser@duke.edu).  Or better yet, make the corrections in the notebook directly and [issue a Git pull request](https://help.github.com/articles/about-pull-requests/).\n",
+    "\n",
+    "\n",
+    "Enabling the interactive Jupyter Notebook\n",
+    "==================\n",
+    "\n",
+    "The book comes in HTML, PDF, and Jupyter Notebook formats, and the latter format contains in-browser examples that you can visualize and edit live in your browser.  Follow these steps to enable this format:\n",
+    "\n",
+    "1. Install software for running the notebook:\n",
+    "\n",
+    "  * [Git](https://git-scm.com/download)\n",
+    "  * [Klamp't](https://github.com/krishauser/Klampt), its dependencies, and its Python API.\n",
+    "  * Python 2.7 and [Jupyter Notebook](http://jupyter.org), or a Python distribution like Anaconda.\n",
+    "  * [Klampt-jupyter-extension](http://github.com/krishauser/Klampt-jupyter-extension) for live Klamp't windows.\n",
+    "  * [jupyter_contrib_nbextensions](https://github.com/ipython-contrib/jupyter_contrib_nbextensions) for LaTeX and table of content support. \n",
+    "  \n",
+    "Note that the Klamp't source is the most up-to-date way to install Klamp't. The Windows binaries may not yet be fully compatible with the Jupyter Notebook plugin, and installing from source on Windows is a massive headache.\n",
+    "\n",
+    "2. Download the book source from Github:\n",
+    "\n",
+    "```console\n",
+    "user@home> git clone https://github.com/krishauser/RoboticSystemsBook\n",
+    "```\n",
+    "\n",
+    "3. Run Jupyter Notebook using the console command:\n",
+    "\n",
+    "```console\n",
+    "user@home> jupyter notebook\n",
+    "```\n",
+    "\n",
+    "This will launch a web browser interface to Jupyter.\n",
+    "\n",
+    "4. The first time you install, please choose the `nbextension` tab from the Home screen, and enable the LaTeX and Table of Contents plugins.  This will lead to the best reading experience.\n",
+    "\n",
+    "5. Open the Jupyter Notebook files in the RoboticSystemsBook folder (this page is named Book). Happy reading!\n"
    ]
   },
   {
